--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -11,10 +11,9 @@ import Container from "./Container.astro"
       </svg>
       
       <h2 class="my-8 text-2xl font-bold text-gray-700 dark:text-white md:text-4xl">
-        A technology-first approach to payments
-        and finance
+        Unifying Healthcare Solutions
       </h2>
-      <p class="text-gray-600 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus ad ipsum pariatur autem, fugit laborum in atque amet obcaecati? Nisi minima aspernatur, quidem nulla cupiditate nam consequatur eligendi magni adipisci.</p>
+      <p class="text-gray-600 dark:text-gray-300 text-lg">Let Xtensys Connected Health Solutions demonstrate our unique approach to building and supporting advanced applications for electronic records, enterprise management programs, technology services, cybersecurity and revenue cycle management.</p>
     </div>
     <div
       class="mt-16 grid divide-x divide-y divide-gray-100 dark:divide-gray-700 overflow-hidden rounded-3xl border border-gray-100 text-gray-600 dark:border-gray-700 sm:grid-cols-2 lg:grid-cols-4 lg:divide-y-0 xl:grid-cols-4"
@@ -33,10 +32,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              First feature
+              Measured Analysis
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              We can successfully transform systems through careful analysis to make data driven decisions that you can rely on.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -61,10 +60,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Second feature
+              Build and Validation
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Our teams collaborate to build new systems and validate the proof of concept with Legacy Systems.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -89,10 +88,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              Third feature
+              Testing and Readiness
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              Our analysts work closely with your teams to train users and test systems for go-live.
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
@@ -121,10 +120,10 @@ import Container from "./Container.astro"
             <h5
               class="text-xl font-semibold text-gray-700 dark:text-white transition group-hover:text-secondary"
             >
-              More features
+              The Xtensys Way
             </h5>
             <p class="text-gray-600 dark:text-gray-300">
-              Neque Dolor, fugiat non cum doloribus aperiam voluptates nostrum.
+              The relationships made between Xtensys and our healthcare partners will remain our top priority. We look forward to a lifelong collaboration in delivering quality patient care together!
             </p>
           </div>
           <a href="#" class="flex items-center justify-between group-hover:text-secondary">
