--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -23,11 +23,11 @@ import Container from "./Container.astro";
         </div>
         <div class="md:7/12 lg:w-1/2">
           <h2 class="text-3xl font-bold text-gray-900 md:text-4xl dark:text-white">
-            Nuxt development is carried out by passionate developers
+            Xtensys build & development is carried out by a passionate team of analysts and developers
           </h2>
           <p class="my-8 text-gray-600 dark:text-gray-300">
-            Nobis minus voluptatibus pariatur dignissimos libero quaerat iure expedita at?
-            Asperiores nemo possimus nesciunt dicta veniam aspernatur quam mollitia. <br> <br> Vitae error, quaerat officia delectus voluptatibus explicabo quo pariatur impedit, at reprehenderit aliquam a ipsum quas voluptatem. Quo pariatur asperiores eum amet.
+            Our teams consist of everyone from highly skilled BID Developers to Clinical Application Analysts.
+            They cover Outpatient specialties, Inpatient specialites, Billing, HIM, Electronic Data Interchange, Data & Analystics, and much more  <br> <br> We have all of the pieces necessary to step into any health system and assist with modernizing their technology and improve patient outcomes.
           </p>
           <div class="divide-y space-y-4 divide-gray-100 dark:divide-gray-800">
             <div class="mt-8 flex gap-4 md:items-center">
@@ -38,7 +38,7 @@ import Container from "./Container.astro";
               </div>
               <div class="w-5/6">
                 <h4 class="font-semibold text-lg text-gray-700 dark:text-indigo-300">Chat Anytime</h3>
-                <p class="text-gray-500 dark:text-gray-400">Asperiores nemo possimus nesciunt quam mollitia.</p>
+                <p class="text-gray-500 dark:text-gray-400">We are always available to answer any questions or discuss the needs of your health system!</p>
               </div> 
             </div> 
             <div class="pt-4 flex gap-4 md:items-center">
@@ -49,7 +49,7 @@ import Container from "./Container.astro";
               </div>
               <div class="w-5/6">
                 <h4 class="font-semibold text-lg text-gray-700 dark:text-teal-300">Real Time Location</h3>
-                <p class="text-gray-500 dark:text-gray-400">Asperiores nemo possimus nesciunt quam mollitia.</p>
+                <p class="text-gray-500 dark:text-gray-400">We recognize the importance of developing connections with our partners and the best way to do that is through transparency and onsite analysis. We can book time to meet with all of our partners in person.</p>
               </div> 
             </div> 
           </div>
