--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -9,17 +9,20 @@ import Container from "./Container.astro"
         <div class="blur-[106px] h-32 bg-gradient-to-r from-cyan-400 to-sky-300 dark:to-indigo-600"></div>
     </div>
     <Container>
-        <div class="relative pt-36 ml-auto">
-            <div class="lg:w-2/3 text-center mx-auto">
-                <h1 class="text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Shaping a world with <span class="text-primary dark:text-white">reimagination.</span></h1>
-                <p class="mt-8 text-gray-700 dark:text-gray-300">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio incidunt nam itaque sed eius modi error totam sit illum. Voluptas doloribus asperiores quaerat aperiam. Quidem harum omnis beatae ipsum soluta!</p>
+        <div class="relative pt-28 ml-auto">
+            <div class="lg:w-7/8 text-center mx-auto">
+              
+              <img class="w-2/3 "src="/images/Frame-1-2.webp" alt="">
+                <h1 class="pt-4 text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifying health system <span class="text-primary dark:text-white">operations</span></h1>
+                <p class="text-lg font-semibold mt-8 text-gray-700 dark:text-gray-300">
+                  Xtensys Connected Health Solutions is committed to making it simpler and more affordable for all types of health systems to modernize their technology and improve patient outcomes. Through a combination of real-world health care experience and in-depth expertise, Xtensys is advancing care with every connection. Take a look at what we've recently delivered at <a class="text-sky-400 after:content-['_↗'] ..." href="https://cayugahealth.org/news-and-articles/">Cayuga Health System</a>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
                     <a
                       href="#"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                     >
-                      <span class="relative text-base font-semibold text-white"
-                        >Get started</span
+                      <span class="relative text-xl font-semibold text-white"
+                        >Reach Out!</span
                       >
                     </a>
                     <a
@@ -27,45 +30,43 @@ import Container from "./Container.astro"
                       class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:border before:border-transparent before:bg-primary/10 before:bg-gradient-to-b before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 dark:before:border-gray-700 dark:before:bg-gray-800 sm:w-max"
                     >
                       <span
-                        class="relative text-base font-semibold text-primary dark:text-white"
+                        class="relative text-xl text-lg font-semibold text-primary dark:text-white"
                         >Learn more</span
                       >
                     </a>
                 </div>
                 <div class="hidden py-8 mt-16 border-y border-gray-100 dark:border-gray-800 sm:flex justify-between">
-                    <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The lowest price</h6>
-                        <p class="mt-2 text-gray-500">Some text here</p>
+                    <div class="text-center">
+                        <h6 class="text-2xl font-semibold text-green-300">Electronic Medical Records </h6>
+                        <p class="mt-2 text-gray-500">ya might need 'em</p>
                     </div>
-                    <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The fastest on the market</h6>
-                        <p class="mt-2 text-gray-500">Some text here</p>
+                    <div class="text-center">
+                        <h6 class="text-2xl font-semibold text-green-300">Enterprise Management Systems</h6>
+                        <p class="mt-2 text-gray-500">yeah, ya need this too</p>
                     </div>
-                    <div class="text-left">
-                        <h6 class="text-lg font-semibold text-gray-700 dark:text-white">The most loved</h6>
-                        <p class="mt-2 text-gray-500">Some text here</p>
+                    <div class="text-center">
+                        <h6 class="text-2xl font-semibold text-green-300">Revenue Cycle Management</h6>
+                        <p class="mt-2 text-gray-500">well, obviously</p>
                     </div>
                 </div>
             </div>
-            <div class="mt-12 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6">
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
+            <div class="mt-12 grid grid-cols-3 sm:grid-cols-5 md:grid-cols-5">
+                <div class="p-4">
                     <img src="./images/clients/microsoft.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                   </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                  <img src="./images/clients/airbnb.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                <div class="p-4">
+                  <img src="./images/clients/Epic_Systems.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
-                <div class="p-4 flex grayscale transition duration-200 hover:grayscale-0">
-                  <img src="./images/clients/google.svg" class="h-9 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
+                <div class="p-4 ">
+                  <img src="./images/clients/Amazon_Web_Services_Logo.svg" class="h-9 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/ge.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
-                  </div>
-                  <div class="p-4 flex grayscale transition duration-200 hover:grayscale-0">
-                    <img src="./images/clients/netflix.svg" class="h-8 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
-                  </div>
-                <div class="p-4 grayscale transition duration-200 hover:grayscale-0">
+
+                <div class="p-4">
                     <img src="./images/clients/google-cloud.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                 </div>
+                <div class="p-4">
+                  <img src="./images/clients/Jira_(Software)_logo.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+              </div>
               </div>
         </div>
     </Container>
