--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -10,10 +10,10 @@ import Container from "./Container.astro"
     </div>
     <Container>
         <div class="relative pt-28 ml-auto">
-            <div class="lg:w-7/8 text-center mx-auto">
+            <div class="lg:w-5/6 text-center mx-auto">
               
-              <img class="w-2/3 "src="/images/Frame-1-2.webp" alt="">
-                <h1 class="pt-4 text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-7xl">Simplifying health system <span class="text-primary dark:text-white">operations</span></h1>
+              <img class="w-2/3 mx-40  "src="/images/Frame-1-2.webp" alt="">
+                <h1 class="pt-4 text-gray-900 dark:text-white font-bold text-5xl md:text-6xl xl:text-6xl">Simplifying health system <span class="text-primary dark:text-white">operations</span></h1>
                 <p class="text-lg font-semibold mt-8 text-gray-700 dark:text-gray-300">
                   Xtensys Connected Health Solutions is committed to making it simpler and more affordable for all types of health systems to modernize their technology and improve patient outcomes. Through a combination of real-world health care experience and in-depth expertise, Xtensys is advancing care with every connection. Take a look at what we've recently delivered at <a class="text-sky-400 after:content-['_↗'] ..." href="https://cayugahealth.org/news-and-articles/">Cayuga Health System</a>
                 <div class="mt-16 flex flex-wrap justify-center gap-y-4 gap-x-6">
@@ -31,7 +31,7 @@ import Container from "./Container.astro"
                     >
                       <span
                         class="relative text-xl text-lg font-semibold text-primary dark:text-white"
-                        >Learn more</span
+                        >Learn More</span
                       >
                     </a>
                 </div>
@@ -50,23 +50,17 @@ import Container from "./Container.astro"
                     </div>
                 </div>
             </div>
-            <div class="mt-12 grid grid-cols-3 sm:grid-cols-5 md:grid-cols-5">
+            <div class="mt-12 grid sm:grid-cols-2 md:grid-cols-3">
                 <div class="p-4">
                     <img src="./images/clients/microsoft.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
                   </div>
                 <div class="p-4">
-                  <img src="./images/clients/Epic_Systems.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
+                  <img src="./images/clients/Epic_Systems.svg" class="h-12 w-auto mx-auto " loading="lazy" alt="client logo" width="" height="" />
                 </div>
                 <div class="p-4 ">
-                  <img src="./images/clients/Amazon_Web_Services_Logo.svg" class="h-9 w-auto m-auto" loading="lazy" alt="client logo" width="" height="" />
+                  <img src="./images/clients/Amazon_Web_Services_Logo.svg" class="h-12 w-auto mx-auto " loading="lazy" alt="client logo" width="" height="" />
                 </div>
-
-                <div class="p-4">
-                    <img src="./images/clients/google-cloud.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
-                </div>
-                <div class="p-4">
-                  <img src="./images/clients/Jira_(Software)_logo.svg" class="h-12 w-auto mx-auto" loading="lazy" alt="client logo" width="" height="" />
-              </div>
+                
               </div>
         </div>
     </Container>
